Loadbalancer.tf
resource "aws_lb" "example" {
  name               = "alb"
  internal           = false
  load_balancer_type = "application"
  subnets            = ["${aws_subnet.public.id}", "${aws_subnet.public_sec.id}"]
  security_groups   = [aws_security_group.allow_tls.id] 

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_lb_listener" "example" {
  load_balancer_arn = aws_lb.example.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.example.arn

  }
}


resource "aws_lb_target_group" "example" {
  name     = "target-group"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
  health_check {
    path                = "/"
    protocol            = "HTTP"
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 3
    interval            = 30
  }
}

resource "aws_autoscaling_attachment" "example" {
  autoscaling_group_name = aws_autoscaling_group.bar.id
  lb_target_group_arn    = aws_lb_target_group.example.arn
}
